--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,10 @@
   
   
   
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -107,6 +111,12 @@
       bottom: 0;
       right: 0;
     }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #282C5C;
+          }
+    }
   </style>
   <script id="splash-screen-script">
     function removeSplashFromWeb() {
@@ -122,6 +132,8 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
   
   
   
